# meowax

./: .gitignore  CMakeLists.txt  TODO.md  main.py  pyproject.toml  summary_2026-04-06.md
.claude/: settings.json
benchmarks/: lorenz_julia.jl  robertson_julia.jl
native/: cudss_diagonal_kernel.cu  rodas5_cudss_ffi.cc
scripts/1_tsit5_scaling/: main.py  results-NVIDIA_GeForce_RTX_4070_SUPER.csv
solvers/: __init__.py  _cudss_ffi.py  _cudss_pallas.py  kencarpgersh5.py  rodas5_custom_kernel_v2.py  rodas5_custom_kernel_v3.py  rodas5_custom_kernel_v4.py  rodas5_custom_kernel_v6.py  rodas5_custom_kernel_v7_tc.py  rodas5_v2.py  rodas5_v2_linear.py  rodas5_v2_nonlinear.py
solvers/linear/: rodas5_linear.py
solvers/nonlinear/: kencarp5_nonlinear.py  kencarpgersh5_nonlinear.py  rodas5_nonlinear.py
tests/: __init__.py  test_30d.py  test_nn_reactions.py  test_robertson.py
tests/linear/: test_bateman.py  test_damped_rotation.py  test_heat_equation.py  test_moving_diffusion_spike.py  test_nn_reactions.py  test_reversible_trapping.py
tests/nonlinear/: test_kaps.py  test_lorenz.py  test_robertson.py  test_vdp.py
tests/reference_solvers/julia/: README.md  run_solver.jl
tests/reference_solvers/julia/systems/: nn_reactions.jl  registry.jl
tests/reference_solvers/python/: diffrax_kvaerno5.py  julia_common.py  julia_kencarp5.py  julia_kvaerno5.py  julia_rodas5.py  julia_tsit5.py  test_diffrax_kvaerno5_cache.py
